--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.taskbar-icon {
-  @apply size-9 relative before:absolute hover:before:size-12 hover:before:inset-0;
-}
-
-.taskbar-icon::before {
-  content: "";
+.modal-icons {
+  @apply size-9 hover:bg-stone-600 p-3 object-contain;
 }
