--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Fira+Code:wght@300..700&display=swap"); */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
