main font change

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.cdnfonts.com/css/anurati");
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
 /* @import url("https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Fira+Code:wght@300..700&display=swap"); */
+
+@import url("https://fonts.cdnfonts.com/css/segoe-ui-variable-static-display");
 
 @tailwind base;
 @tailwind components;
@@ -15,7 +15,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
 
-  @apply font-dmSans bg-stone-800;
+  @apply font-segoe bg-stone-800;
 }
 
 /* WebKit browsers (Chrome, Safari) */
