added quick settings

--- a/src/index.css
+++ b/src/index.css
@@ -132,3 +132,62 @@ html {
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+/*********** Baseline, reset styles ***********/
+input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  cursor: pointer;
+  width: 23.5rem;
+}
+
+/* Removes default focus */
+input[type="range"]:focus {
+  outline: none;
+}
+
+/******** Chrome, Safari, Opera and Edge Chromium styles ********/
+/* slider track */
+input[type="range"]::-webkit-slider-runnable-track {
+  background-color: #44403c;
+  border-radius: 0.5rem;
+  height: 3.5px;
+}
+
+/* slider thumb */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  margin-top: -3.25px; /* Centers thumb on the track */
+  background-color: #2e6dff;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+}
+
+input[type="range"]:focus::-webkit-slider-thumb {
+  outline: 2px solid #2e6dff;
+  outline-offset: 0.1rem;
+}
+
+/*********** Firefox styles ***********/
+/* slider track */
+input[type="range"]::-moz-range-track {
+  background-color: #44403c;
+  border-radius: 0.5rem;
+  height: 3.5px;
+}
+
+/* slider thumb */
+input[type="range"]::-moz-range-thumb {
+  background-color: #2e6dff;
+  border: none; /*Removes extra border that FF applies*/
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+}
+
+input[type="range"]:focus::-moz-range-thumb {
+  outline: 3px solid #2e6dff;
+  outline-offset: 0.125rem;
+}
